--- a/src/Altinn.Profile.Integrations/Altinn.Profile.Integrations.csproj
+++ b/src/Altinn.Profile.Integrations/Altinn.Profile.Integrations.csproj
@@ -23,6 +23,7 @@
     <PackageReference Include="WolverineFx.EntityFrameworkCore" Version="4.6.0" />
     <PackageReference Include="WolverineFx.Postgresql" Version="4.6.0" />
     <PackageReference Include="Microsoft.CodeAnalysis.Workspaces.MSBuild" Version="4.14.0" />
+    <PackageReference Include="Microsoft.Build.Tasks.Core" Version="17.14.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.6.0" />  
   </ItemGroup>
 
