--- a/src/Altinn.Profile.Integrations/Altinn.Profile.Integrations.csproj
+++ b/src/Altinn.Profile.Integrations/Altinn.Profile.Integrations.csproj
@@ -1,39 +1,43 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-	<PropertyGroup>
-		<TargetFramework>net9.0</TargetFramework>
-		<ImplicitUsings>enable</ImplicitUsings>
-		<Nullable>enable</Nullable>
-		<GenerateDocumentationFile>true</GenerateDocumentationFile>
-	</PropertyGroup>
+  <PropertyGroup>
+    <TargetFramework>net9.0</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+  </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="Altinn.Common.AccessTokenClient" Version="3.0.15" />
+    <PackageReference Include="AutoMapper" Version="14.0.0" />
+    <PackageReference Include="EFCore.NamingConventions" Version="9.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.7">
+	    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
+    <PackageReference Include="Npgsql.OpenTelemetry" Version="9.0.3" />
+    <PackageReference Include="Yuniql.AspNetCore" Version="1.2.25" />
+    <PackageReference Include="Yuniql.PostgreSql" Version="1.3.15" />
+    <PackageReference Include="Altinn.Common.PEP" Version="4.1.2" />
+    <PackageReference Include="WolverineFx" Version="4.6.0" />
+    <PackageReference Include="WolverineFx.EntityFrameworkCore" Version="4.6.0" />
+    <PackageReference Include="WolverineFx.Postgresql" Version="4.6.0" />
+    <PackageReference Include="Microsoft.CodeAnalysis.Workspaces.MSBuild" Version="4.14.0" />
+    <PackageReference Include="Microsoft.Build.Tasks.Core" Version="17.14.8" />
+  </ItemGroup>
 
-	<ItemGroup>
-		<PackageReference Include="Altinn.Common.AccessTokenClient" Version="3.0.15" />
-		<PackageReference Include="AutoMapper" Version="14.0.0" />
-		<PackageReference Include="EFCore.NamingConventions" Version="9.0.0" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.7">
-			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-		</PackageReference>
-		<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
-		<PackageReference Include="Npgsql.OpenTelemetry" Version="9.0.3" />
-		<PackageReference Include="Yuniql.AspNetCore" Version="1.2.25" />
-		<PackageReference Include="Yuniql.PostgreSql" Version="1.3.15" />
-		<PackageReference Include="Altinn.Common.PEP" Version="4.1.2" />
-	</ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Altinn.Profile.Core\Altinn.Profile.Core.csproj" />
+    <InternalsVisibleTo Include="Altinn.Profile.Tests" />
+  </ItemGroup>
 
-	<ItemGroup>
-		<ProjectReference Include="..\Altinn.Profile.Core\Altinn.Profile.Core.csproj" />
-		<InternalsVisibleTo Include="Altinn.Profile.Tests" />
-	</ItemGroup>
-
-	<ItemGroup Condition="'$(Configuration)'=='Debug'">
-		<PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.556">
-			<PrivateAssets>all</PrivateAssets>
-			<IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
-		</PackageReference>
-		<AdditionalFiles Include="..\..\stylecop.json">
-			<Link>stylecop.json</Link>
-		</AdditionalFiles>
-	</ItemGroup>
+  <ItemGroup Condition="'$(Configuration)'=='Debug'">
+    <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.556">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
+    <AdditionalFiles Include="..\..\stylecop.json">
+      <Link>stylecop.json</Link>
+    </AdditionalFiles>
+  </ItemGroup>
 
 </Project>
